# opencv-mtcnn

./: CMakeLists.txt
lib/src/: detector.cc
